Added css styling file, and updated html file to include it

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Age Predictor</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   <h1>Predict Age</h1>
